--- a/materials.html
+++ b/materials.html
@@ -113,11 +113,12 @@
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
                                 <a href="lecture_slides/Lecture1_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
-                                <a href="lecture_notes/Econ 2 Lecture 1 W25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
+                                <a href="lecture_notes/Econ 2 Lecture 1 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture2_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 2 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -133,11 +134,13 @@
                             <div>Chapters 3.0, 3.1</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture3_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 3 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture4_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 4 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -153,11 +156,13 @@
                             <div>Chapter 3.2</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture5_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 5 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture6_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 6 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -173,11 +178,13 @@
                             <div>Chapters 3.2, 3.3, 4.0, 4.1</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture7_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 7 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture8_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 8 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -197,7 +204,8 @@
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture9_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 9 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4"><strong>Midterm Exam: Monday, April 28th</strong><br>No Quiz this week<br>Discussion Google Form: Midterm Recap</td>
@@ -209,11 +217,13 @@
                             <div>Chapters 4.3, 5.1</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture10_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 10 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture11_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 11 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -229,11 +239,13 @@
                             <div>Chapters 5.1, 5.2, 6.1</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture12_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 12 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture13_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 13 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -249,11 +261,13 @@
                             <div>Chapters 5.1, 5.2, 6.1</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture14_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 14 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture15_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 15 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -273,7 +287,8 @@
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture16_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 16 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
@@ -289,11 +304,13 @@
                             <div>Chapters 7.1, 7.2, 7.3, 7.4</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture17_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 17 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
-                                <span class="text-gray-500 italic">Lecture materials coming soon</span>
+                                <a href="lecture_slides/Lecture18_updated.pdf" class="text-blue-600 hover:underline">Lecture Slides</a> •
+                                <a href="lecture_notes/Econ 2 Lecture 18 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
                         <td class="py-3 px-4">
