--- a/materials.html
+++ b/materials.html
@@ -90,6 +90,14 @@
         <a href="index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">← Back to Home</a>
     </div>
 
+    <!-- Course Information -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+        <h3 class="text-xl font-bold text-blue-700 mb-4">Course Information</h3>
+        <div class="mb-4">
+            <a href="course_materials/ECON_2_Spring_25_Syllabus.pdf" class="text-blue-600 hover:underline">Course Syllabus</a>
+        </div>
+    </div>
+
     <!-- Course Schedule -->
     <div class="bg-white p-6 rounded-lg shadow-md mb-8">
         <h3 class="text-xl font-bold text-blue-700 mb-4">Course Schedule</h3>
