--- a/materials.html
+++ b/materials.html
@@ -95,6 +95,12 @@
         <h3 class="text-xl font-bold text-blue-700 mb-4">Course Information</h3>
         <div class="mb-4">
             <a href="course_materials/ECON_2_Spring_25_Syllabus.pdf" class="text-blue-600 hover:underline">Course Syllabus</a>
+            <br>
+            <a href="https://shorturl.at/eYOXy" class="text-blue-600 hover:underline">Coffee Hours Sign-Up</a>
+            <br>
+            <a href="https://ucsb.instructure.com/courses/26440" class="text-blue-600 hover:underline">Canvas Course Page</a>
+            <br>
+            <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Course Page</a>
         </div>
     </div>
 
@@ -132,7 +138,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 1</a> released Apr 2, Due Apr 7<br>
                             Discussion Google Form: Supply and Demand Review<br>
-                            <a href="review_session/Week1ReviewSession.pdf" class="text-blue-600 hover:underline">Week 1 Review Session Questions</a>
+                            <a href="review_session/Week1ReviewSession.pdf" class="text-blue-600 hover:underline">Week 1 (April 3rd) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -154,7 +160,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 2</a> released Apr 9, Due Apr 14<br>
                             <a href="activities/activity1/index.html" class="text-blue-600 hover:underline">Activity #1</a> in section<br>
-                            <a href="review_session/Week2ReviewSession.pdf" class="text-blue-600 hover:underline">Week 2 Review Session Questions</a>
+                            <a href="review_session/Week2ReviewSession.pdf" class="text-blue-600 hover:underline">Week 2 (April 10th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -176,7 +182,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 3</a> released Apr 16, Due Apr 21<br>
                             <a href="activities/activity2/index.html" class="text-blue-600 hover:underline">Activity #2</a> in section<br>
-                            <a href="review_session/Week3ReviewSession.pdf" class="text-blue-600 hover:underline">Week 3 Review Session Questions</a>
+                            <a href="review_session/Week3ReviewSession.pdf" class="text-blue-600 hover:underline">Week 3 (April 17th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -198,7 +204,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 4</a> released Apr 23, Due Apr 28<br>
                             Discussion Google Form: Midterm Review<br>
-                            <a href="review_session/Week4ReviewSession.pdf" class="text-blue-600 hover:underline">Week 4 Review Session Questions</a>
+                            <a href="review_session/Week4ReviewSession.pdf" class="text-blue-600 hover:underline">Week 4 (April 24th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -216,7 +222,7 @@
                                 <a href="lecture_notes/Econ 2 Lecture 9 S25.pdf" class="text-blue-600 hover:underline">Lecture Notes</a>
                             </div>
                         </td>
-                        <td class="py-3 px-4"><strong>Midterm Exam: Monday, April 28th</strong><br>No Quiz this week<br>Discussion Google Form: Midterm Recap</td>
+                        <td class="py-3 px-4"><strong>Midterm Exam: Monday, April 28th</strong><br>No Quiz this week<br>Discussion Google Form: Midterm Recap<br>No Review Session this week (May 1st)</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 6</td>
@@ -237,7 +243,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 5</a> released May 7, Due May 12<br>
                             Activity #3 in section<br>
-                            <a href="review_session/Week6ReviewSession.pdf" class="text-blue-600 hover:underline">Week 6 Review Session Questions</a>
+                            <a href="review_session/Week6ReviewSession.pdf" class="text-blue-600 hover:underline">Week 6 (May 8th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -259,7 +265,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 6</a> released May 14, Due May 19<br>
                             Discussion Google Form: Aggregate Expenditures Model<br>
-                            <a href="review_session/Week7ReviewSession.pdf" class="text-blue-600 hover:underline">Week 7 Review Session Questions</a>
+                            <a href="review_session/Week7ReviewSession.pdf" class="text-blue-600 hover:underline">Week 7 (May 15th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -281,7 +287,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 7</a> released May 21, Due May 28<br>
                             Activity #4 in section<br>
-                            <a href="review_session/Week8ReviewSession.pdf" class="text-blue-600 hover:underline">Week 8 Review Session Questions</a>
+                            <a href="review_session/Week8ReviewSession.pdf" class="text-blue-600 hover:underline">Week 8 (May 22nd) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -302,7 +308,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 8</a> released May 28, Due Jun 2<br>
                             Discussion Google Form: Monetary Policy<br>
-                            <a href="review_session/Week9ReviewSession.pdf" class="text-blue-600 hover:underline">Week 9 Review Session Questions</a>
+                            <a href="review_session/Week9ReviewSession.pdf" class="text-blue-600 hover:underline">Week 9 (May 29th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -324,7 +330,7 @@
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 9</a> released Jun 4, Due Jun 10<br>
                             Activity #5 in section<br>
-                            <a href="review_session/Week10ReviewSession.pdf" class="text-blue-600 hover:underline">Week 10 Review Session Questions</a>
+                            <a href="review_session/Week10ReviewSession.pdf" class="text-blue-600 hover:underline">Week 10 (June 5th) Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
