Adjusted column widths in materials table

--- a/materials.html
+++ b/materials.html
@@ -110,12 +110,12 @@
         
         <div class="overflow-hidden">
             <table class="min-w-full">
-                <thead>
-                    <tr class="bg-gray-100">
-                        <th class="py-3 px-4 text-left">Week</th>
-                        <th class="py-3 px-4 text-left">Topic</th>
-                        <th class="py-3 px-4 text-left">Readings</th>
-                        <th class="py-3 px-4 text-left">Key Dates</th>
+                <thead class="bg-gray-50">
+                    <tr>
+                        <th class="py-3 px-4 text-left w-24">Week</th>
+                        <th class="py-3 px-4 text-left w-48">Topic</th>
+                        <th class="py-3 px-4 text-left w-1/2">Readings and Materials</th>
+                        <th class="py-3 px-4 text-left">Assignments</th>
                     </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200">
