Made main columns equal width

--- a/materials.html
+++ b/materials.html
@@ -113,9 +113,9 @@
                 <thead class="bg-gray-50">
                     <tr>
                         <th class="py-3 px-4 text-left w-24">Week</th>
-                        <th class="py-3 px-4 text-left w-48">Topic</th>
-                        <th class="py-3 px-4 text-left w-1/2">Readings and Materials</th>
-                        <th class="py-3 px-4 text-left">Assignments</th>
+                        <th class="py-3 px-4 text-left w-1/3">Topic</th>
+                        <th class="py-3 px-4 text-left w-1/3">Readings and Materials</th>
+                        <th class="py-3 px-4 text-left w-1/3">Assignments</th>
                     </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200">
