--- a/activities/index.html
+++ b/activities/index.html
@@ -148,13 +148,34 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Activity 3 Card -->
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="h-2 bg-blue-600"></div>
+                <div class="p-6">
+                    <h3 class="text-xl font-medium mb-2">Leading Economic Indicators</h3>
+                    <p class="text-gray-600 mb-4">Analyze leading economic indicators and build your own recession prediction model.</p>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <span>May 6-9, 2025</span>
+                    </div>
+                    <div class="flex flex-wrap gap-1 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Recessions</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Indicators</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Forecasting</span>
+                    </div>
+                    <div class="mt-4 space-y-2">
+                        <a href="activity3/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
+                        <a href="activity3/index-builder.html" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Build Index</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
     <!-- Footer -->
     <footer class="bg-gray-100 border-t mt-12 py-6 px-4">
         <div class="container mx-auto">
-            <p class="text-gray-600">© 2025 Economics Department</p>
+            <p class="text-gray-600"> 2025 Economics Department</p>
         </div>
     </footer>
 </body>
