--- a/activities/activity3/index.html
+++ b/activities/activity3/index.html
@@ -32,7 +32,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.8));
+            background: ;
             color: white;
             padding: 2rem;
         }
@@ -79,83 +79,140 @@
         </div>
     </header>
 
-    <!-- Main Content -->
-    <main class="container mx-auto px-4 py-8">
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-            <!-- Controls -->
-            <div class="lg:col-span-1 space-y-6 bg-white p-6 rounded-lg shadow">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">
-                        Compare Indicator
-                    </label>
-                    <select id="indicator-compare" class="w-full p-2 border rounded">
-                        <option value="all">Compare All Indicators</option>
-                        <option value="10Y2Y_Yield">10Y-2Y Yield Spread</option>
-                        <option value="ISM_Orders">ISM New Orders</option>
-                        <option value="Building_Permits">Building Permits</option>
-                        <option value="Consumer_Confidence">Consumer Confidence</option>
-                        <option value="CLI">Composite Leading Indicator</option>
-                        <option value="SP500">S&P 500</option>
-                        <option value="Initial_Claims">Initial Claims</option>
-                        <option value="PMI">PMI</option>
-                    </select>
-                </div>
+    <!-- Step Navigation -->
+    <div class="flex mb-8 border-b">
+        <button id="nav-instructions" class="step-nav font-medium px-4 py-2 border-b-2 border-blue-600 text-blue-600">1. Instructions</button>
+        <button id="nav-explore" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">2. Explore Indicators</button>
+        <a href="index-builder.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">3. Build Index</a>
+    </div>
 
-                <div class="space-y-3">
-                    <label class="block text-sm font-medium text-gray-700">
-                        Overlay Options
-                    </label>
-                    <div>
-                        <input type="checkbox" id="show-gdp" class="mr-2">
-                        <label for="show-gdp">Show GDP Growth</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="show-unemployment" class="mr-2">
-                        <label for="show-unemployment">Show Unemployment Rate</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="highlight-recessions" class="mr-2" checked>
-                        <label for="highlight-recessions">Highlight Recessions</label>
-                    </div>
-                </div>
+    <!-- Instructions Step -->
+    <div id="step-instructions" class="step-content">
+        <div class="bg-white rounded-lg shadow-md p-6">
+            <h2 class="text-2xl font-semibold mb-4">Instructions</h2>
+            <p class="mb-4">In this activity, you will explore leading economic indicators and their relationship to recessions.</p>
+            
+            <h3 class="text-xl font-semibold mb-3">Understanding Leading Economic Indicators</h3>
+            <p class="mb-4">Leading economic indicators are statistics that provide early signals of where the economy is heading. They are called "leading" because they tend to shift direction before the economy as a whole changes. In this activity, we'll explore several key leading indicators:</p>
+            
+            <ul class="list-disc pl-6 space-y-2 mb-6">
+                <li><strong>10Y-2Y Yield Spread:</strong> The difference between 10-year and 2-year Treasury yields. An inverted yield curve (negative spread) often precedes recessions.</li>
+                <li><strong>ISM New Orders:</strong> A measure of new orders in manufacturing. Values below 50 indicate contraction.</li>
+                <li><strong>Building Permits:</strong> A measure of future construction activity. Declining permits may signal economic slowdown.</li>
+                <li><strong>Consumer Confidence:</strong> Measures consumers' optimism about the economy. Lower confidence often precedes reduced spending.</li>
+                <li><strong>PMI (Purchasing Managers Index):</strong> A composite index of manufacturing activity. Values below 50 indicate contraction.</li>
+                <li><strong>Initial Unemployment Claims:</strong> Weekly new jobless claims. Rising claims often signal labor market weakness.</li>
+                <li><strong>S&P 500:</strong> A broad measure of stock market performance. Stock prices often reflect future economic expectations.</li>
+                <li><strong>CLI (Composite Leading Indicator):</strong> An OECD index combining multiple leading indicators.</li>
+            </ul>
 
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-lg font-medium mb-4">Signal Analysis</h3>
-                    <p class="mb-4">Analyzing signals for <span class="font-medium" id="currentSignalType"></span></p>
-                    <div class="overflow-x-auto">
-                        <table class="min-w-full">
-                            <thead>
-                                <tr class="bg-gray-50">
-                                    <th class="px-4 py-2 text-left">Date</th>
-                                    <th class="px-4 py-2 text-left">Value</th>
-                                    <th class="px-4 py-2 text-left">Result</th>
-                                    <th class="px-4 py-2 text-left">Lead Time</th>
-                                </tr>
-                            </thead>
-                            <tbody id="signalAnalysis"></tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
+            <p class="mb-4">Follow these steps:</p>
+            <ol class="list-decimal pl-6 space-y-2">
+                <li>Start by exploring individual indicators and their historical patterns in the next tab.</li>
+                <li>Analyze how each indicator behaves before and during recessions.</li>
+                <li>Finally, create your own leading index by combining these indicators.</li>
+            </ol>
 
-            <!-- Chart and Timeline -->
-            <div class="lg:col-span-2 space-y-8">
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <div class="chart-container">
-                        <canvas id="relationshipChart"></canvas>
-                    </div>
-                </div>
-
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-lg font-medium mb-4">Lead Time Analysis</h3>
-                    <div id="leadTimeStats" class="text-sm"></div>
-                </div>
+            <div class="mt-8">
+                <button onclick="document.getElementById('nav-explore').click()" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    Start Exploring →
+                </button>
             </div>
         </div>
+    </div>
 
-        <!-- Analysis Results -->
-        <div id="analysisResults" class="bg-white rounded-lg shadow-md p-6 mt-6"></div>
-    </main>
+    <!-- Explore Step -->
+    <div id="step-explore" class="step-content hidden">
+        <!-- Main Content -->
+        <main class="container mx-auto px-4 py-8">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                <!-- Controls -->
+                <div class="lg:col-span-1 space-y-6 bg-white p-6 rounded-lg shadow">
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">
+                            Compare Indicator
+                        </label>
+                        <select id="indicator-compare" class="w-full p-2 border rounded">
+                            <option value="all">Compare All Indicators</option>
+                            <option value="10Y2Y_Yield">10Y-2Y Yield Spread</option>
+                            <option value="ISM_Orders">ISM New Orders</option>
+                            <option value="Building_Permits">Building Permits</option>
+                            <option value="Consumer_Confidence">Consumer Confidence</option>
+                            <option value="CLI">Composite Leading Indicator</option>
+                            <option value="SP500">S&P 500</option>
+                            <option value="Initial_Claims">Initial Claims</option>
+                            <option value="PMI">PMI</option>
+                        </select>
+                    </div>
+
+                    <div class="space-y-3">
+                        <label class="block text-sm font-medium text-gray-700">
+                            Overlay Options
+                        </label>
+                        <div>
+                            <input type="checkbox" id="show-gdp" class="mr-2">
+                            <label for="show-gdp">Show GDP Growth</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="show-unemployment" class="mr-2">
+                            <label for="show-unemployment">Show Unemployment Rate</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="highlight-recessions" class="mr-2" checked>
+                            <label for="highlight-recessions">Highlight Recessions</label>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-lg font-medium mb-4">Signal Analysis</h3>
+                        <p class="mb-4">Analyzing signals for <span class="font-medium" id="currentSignalType"></span></p>
+                        <div class="overflow-x-auto">
+                            <table class="min-w-full">
+                                <thead>
+                                    <tr class="bg-gray-50">
+                                        <th class="px-4 py-2 text-left">Date</th>
+                                        <th class="px-4 py-2 text-left">Value</th>
+                                        <th class="px-4 py-2 text-left">Result</th>
+                                        <th class="px-4 py-2 text-left">Lead Time</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="signalAnalysis"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Chart and Timeline -->
+                <div class="lg:col-span-2 space-y-8">
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <div class="chart-container">
+                            <canvas id="relationshipChart"></canvas>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-lg font-medium mb-4">Lead Time Analysis</h3>
+                        <div id="leadTimeStats" class="text-sm"></div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Analysis Results -->
+            <div id="analysisResults" class="bg-white rounded-lg shadow-md p-6 mt-6"></div>
+        </main>
+
+        <!-- Add Next Button at the bottom -->
+        <div class="mt-8 text-center">
+            <a href="index-builder.html" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                Build Your Index →
+            </a>
+        </div>
+    </div>
+
+    <!-- Analyze Step -->
+    <div id="step-analyze" class="step-content hidden">
+        <!-- Your existing analyze content -->
+    </div>
 
     <script>
         // Global variables
@@ -997,6 +1054,55 @@
 
             document.getElementById('analysisResults').innerHTML = analysisHtml;
         }
+    </script>
+
+    <script>
+        function setupNavigation() {
+            const steps = ['instructions', 'explore'];
+            const navButtons = steps.map(step => document.getElementById(`nav-${step}`));
+            const stepContents = steps.map(step => document.getElementById(`step-${step}`));
+
+            function showStep(index) {
+                navButtons.forEach((btn, i) => {
+                    if (i === index) {
+                        btn.classList.remove('text-gray-500', 'border-transparent');
+                        btn.classList.add('text-blue-600', 'border-blue-600');
+                    } else {
+                        btn.classList.remove('text-blue-600', 'border-blue-600');
+                        btn.classList.add('text-gray-500', 'border-transparent');
+                    }
+                });
+
+                stepContents.forEach((content, i) => {
+                    if (i === index) {
+                        content.classList.remove('hidden');
+                    } else {
+                        content.classList.add('hidden');
+                    }
+                });
+            }
+
+            // Set up click handlers for nav buttons
+            navButtons.forEach((btn, index) => {
+                btn.addEventListener('click', () => showStep(index));
+            });
+
+            // Check for hash in URL
+            if (window.location.hash === '#explore') {
+                showStep(1);  // Show explore step
+            } else {
+                showStep(0);  // Show instructions by default
+            }
+
+            // Handle Start Exploring button
+            const startExploreBtn = document.querySelector('[onclick="document.getElementById(\'nav-explore\').click()"]');
+            if (startExploreBtn) {
+                startExploreBtn.addEventListener('click', () => showStep(1));
+            }
+        }
+
+        // Initialize navigation
+        setupNavigation();
     </script>
 </body>
 </html>
