--- a/faq.html
+++ b/faq.html
@@ -169,6 +169,9 @@
             <div class="mb-4">
                 <h4 class="font-semibold mb-2">What is the grading scale?</h4>
                 <div class="space-y-2 text-gray-700">
+                    <p class="mb-4">Because the grade in this course is used to determine your eligibility in the major, the department has instituted a Grading Guideline that recommends the following distribution:</p>
+                    <p class="mb-4">A: 20%, B: 35%, C+: 10%, C: 20%</p>
+                    <p class="mb-4">The course grading and difficulty is set up to adhere to these guidelines. However, it is possible that a higher than anticipated fraction of students perform above expectations. Therefore, the minimum grade you will receive will follow a standard grading scale:</p>
                     <div class="grid grid-cols-3 gap-4">
                         <div><strong>A:</strong> 93-100%</div>
                         <div><strong>A-:</strong> 90-93%</div>
