--- a/activities/index.html
+++ b/activities/index.html
@@ -166,6 +166,7 @@
                     <div class="mt-4 space-y-2">
                         <a href="activity3/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
                         <a href="activity3/index-builder.html" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Build Index</a>
+                        <a href="activity3/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
                     </div>
                 </div>
             </div>
