--- a/activities/activity3/ta-dashboard.html
+++ b/activities/activity3/ta-dashboard.html
@@ -324,8 +324,8 @@
 
                 <!-- Aggregate Index Section -->
                 <div class="bg-white rounded-lg shadow p-6">
-                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Aggregate Leading Index</h2>
-                    <p class="text-gray-600 mb-6">Aggregate index created using the average weights from student responses.</p>
+                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Class Average Leading Index</h2>
+                    <p class="text-gray-600 mb-6">Aggregate index created using the average weights from student responses or equal weights when no student data is uploaded.</p>
                     
                     <div class="chart-container">
                         <canvas id="indexChart"></canvas>
@@ -354,10 +354,11 @@
                             <table class="min-w-full divide-y divide-gray-200">
                                 <thead>
                                     <tr>
-                                        <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Signal Date</th>
-                                        <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Value</th>
+                                        <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
+                                        <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Type</th>
                                         <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Recession Start</th>
                                         <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Lead Time (Months)</th>
+                                        <th class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Result</th>
                                     </tr>
                                 </thead>
                                 <tbody id="signalsTable" class="bg-white divide-y divide-gray-200">
@@ -384,6 +385,18 @@
                                 <div>
                                     <span class="text-gray-500">Missed Recessions:</span>
                                     <span id="missedRecessions" class="ml-2 font-medium">-</span>
+                                </div>
+                            </div>
+                            <div class="grid grid-cols-2 md:grid-cols-2 gap-4 text-sm mt-3 pt-3 border-t border-gray-200">
+                                <div>
+                                    <span class="text-gray-500">Recession Detection Rate:</span>
+                                    <span id="detectionRate" class="ml-2 font-medium">-</span>
+                                    <div class="text-xs text-gray-400">Percentage of recessions correctly predicted</div>
+                                </div>
+                                <div>
+                                    <span class="text-gray-500">Signal Accuracy:</span>
+                                    <span id="accuracy" class="ml-2 font-medium">-</span>
+                                    <div class="text-xs text-gray-400">Percentage of signals that preceded recessions</div>
                                 </div>
                             </div>
                         </div>
